--- a/Counterexample_Report/index_WithoutGraphs.html
+++ b/Counterexample_Report/index_WithoutGraphs.html
@@ -22,9 +22,9 @@
 </header>
 
 <div class="sections" ng-mousemove="setWidth($event)" ng-mouseup="setMouseUp()">
-    <section id="errorpath_section">
+    <section id="errorpath_section" ng-controller="ErrorpathController">
         <div id="middleLine" ng-mousedown="setMouseDown()"></div>
-        <header>
+        <header ng-controller="SearchController">
             <div class="btn-group">
                 <button class="btn btn-success" ng-click="clickedErrpathButton($event)">Prev</button>
                 <button class="btn btn-warning" ng-click="clickedErrpathButton($event)">Start</button>
@@ -51,7 +51,7 @@
                 <p class="markedDescriptions">Matches in edge-description: {{numOfDescriptionMatches}}</p>
             </div>
         </header>
-        <div class="fileContent">
+        <div class="fileContent" ng-controller="ValueAssignmentsController">
             <table id="err_table">
                 <tr id="errpath-{{$index}}" ng-repeat="line in errorPathData">
                     <td ng-click="showValues($event)" data-toggle="popover" data-placement="right" data-trigger="click" data-content="{{line.valString}}"><pre>-V-</pre></td>
@@ -105,7 +105,7 @@
                     <!--CFAFUNCTIONGRAPHS-->
                 </div>
             </div>
-            <div class="fileContent" ng-show="tabIsSet(2)">
+            <div class="fileContent" ng-show="tabIsSet(2)" ng-controller="ARGController">
                 <div class="edit-line">
                     <div ng-controller="ZoomController">
                         <p>Zoom Factor (%)</p>
@@ -1013,27 +1013,27 @@
 <pre id="statistics-36"></pre>
 <pre id="statistics-37">Number of path formula cache hits:   100 (24%)</pre>
 <pre id="statistics-38"></pre>
-<pre id="statistics-39">Time for post operator:                  0.093s</pre>
-<pre id="statistics-40">  Time for path formula creation:        0.090s</pre>
-<pre id="statistics-41">    Actual computation:                  0.177s</pre>
-<pre id="statistics-42">Time for strengthen operator:            0.116s</pre>
-<pre id="statistics-43">  Time for satisfiability checks:        0.114s</pre>
+<pre id="statistics-39">Time for post operator:                  0.088s</pre>
+<pre id="statistics-40">  Time for path formula creation:        0.084s</pre>
+<pre id="statistics-41">    Actual computation:                  0.154s</pre>
+<pre id="statistics-42">Time for strengthen operator:            0.113s</pre>
+<pre id="statistics-43">  Time for satisfiability checks:        0.110s</pre>
 <pre id="statistics-44">Time for prec operator:                  0.054s</pre>
-<pre id="statistics-45">  Time for abstraction:                  0.052s (Max:     0.030s, Count: 6)</pre>
-<pre id="statistics-46">    Boolean abstraction:                 0.017s</pre>
+<pre id="statistics-45">  Time for abstraction:                  0.050s (Max:     0.029s, Count: 6)</pre>
+<pre id="statistics-46">    Boolean abstraction:                 0.016s</pre>
 <pre id="statistics-47">    Solving time:                        0.011s (Max:     0.010s)</pre>
 <pre id="statistics-48">    Model enumeration time:              0.000s</pre>
-<pre id="statistics-49">    Time for BDD construction:           0.001s (Max:     0.001s)</pre>
+<pre id="statistics-49">    Time for BDD construction:           0.000s (Max:     0.000s)</pre>
 <pre id="statistics-50">Time for merge operator:                 0.000s</pre>
 <pre id="statistics-51">Time for coverage check:                 0.005s</pre>
 <pre id="statistics-52">  Time for BDD entailment checks:        0.005s</pre>
-<pre id="statistics-53">Total time for SMT solver (w/o itp):     0.125s</pre>
+<pre id="statistics-53">Total time for SMT solver (w/o itp):     0.121s</pre>
 <pre id="statistics-54"></pre>
 <pre id="statistics-55">Number of BDD nodes:                               202</pre>
 <pre id="statistics-56">Size of BDD node table:                            55949</pre>
 <pre id="statistics-57">Size of BDD cache:                                 5623</pre>
 <pre id="statistics-58">Size of BDD node cleanup queue:                           0 (count: 88, min: 0, max: 0, avg: 0,00)</pre>
-<pre id="statistics-59">Time for BDD node cleanup:                             0.000s</pre>
+<pre id="statistics-59">Time for BDD node cleanup:                             0.001s</pre>
 <pre id="statistics-60">Time for BDD garbage collection:                       0.000s (in 0 runs)</pre>
 <pre id="statistics-61"></pre>
 <pre id="statistics-62">PrecisionBootstrap statistics</pre>
@@ -1045,21 +1045,21 @@
 <pre id="statistics-68">AutomatonAnalysis (AssertionAutomaton) statistics</pre>
 <pre id="statistics-69">-------------------------------------------------</pre>
 <pre id="statistics-70">Number of states:                                  1</pre>
-<pre id="statistics-71">Total time for successor computation:                  0.018s</pre>
+<pre id="statistics-71">Total time for successor computation:                  0.017s</pre>
 <pre id="statistics-72">Automaton transfers with branching:                0</pre>
 <pre id="statistics-73">Automaton transfer successors:                          763 (count: 763, min: 1, max: 1, avg: 1,00) [1 x 763]</pre>
 <pre id="statistics-74"></pre>
 <pre id="statistics-75">AutomatonAnalysis (ErrorLabelAutomaton) statistics</pre>
 <pre id="statistics-76">--------------------------------------------------</pre>
 <pre id="statistics-77">Number of states:                                  1</pre>
-<pre id="statistics-78">Total time for successor computation:                  0.006s</pre>
+<pre id="statistics-78">Total time for successor computation:                  0.010s</pre>
 <pre id="statistics-79">Automaton transfers with branching:                0</pre>
 <pre id="statistics-80">Automaton transfer successors:                          763 (count: 763, min: 1, max: 1, avg: 1,00) [1 x 763]</pre>
 <pre id="statistics-81"></pre>
 <pre id="statistics-82">AutomatonAnalysis (TerminatingFunctions) statistics</pre>
 <pre id="statistics-83">---------------------------------------------------</pre>
 <pre id="statistics-84">Number of states:                                  1</pre>
-<pre id="statistics-85">Total time for successor computation:                  0.013s</pre>
+<pre id="statistics-85">Total time for successor computation:                  0.015s</pre>
 <pre id="statistics-86">Automaton transfers with branching:                0</pre>
 <pre id="statistics-87">Automaton transfer successors:                          760 (count: 763, min: 0, max: 1, avg: 1,00) [0 x 3, 1 x 760]</pre>
 <pre id="statistics-88"></pre>
@@ -1074,32 +1074,32 @@
 <pre id="statistics-97">Number of times stopped:         3</pre>
 <pre id="statistics-98">Number of times breaked:         3</pre>
 <pre id="statistics-99"></pre>
-<pre id="statistics-100">Total time for CPA algorithm:         0.375s (Max:     0.212s)</pre>
+<pre id="statistics-100">Total time for CPA algorithm:         0.369s (Max:     0.211s)</pre>
 <pre id="statistics-101">  Time for choose from waitlist:      0.002s</pre>
-<pre id="statistics-102">  Time for precision adjustment:      0.060s</pre>
-<pre id="statistics-103">  Time for transfer relation:         0.285s</pre>
-<pre id="statistics-104">  Time for merge operator:            0.001s</pre>
-<pre id="statistics-105">  Time for stop operator:             0.006s</pre>
-<pre id="statistics-106">  Time for adding to reached set:     0.008s</pre>
+<pre id="statistics-102">  Time for precision adjustment:      0.063s</pre>
+<pre id="statistics-103">  Time for transfer relation:         0.280s</pre>
+<pre id="statistics-104">  Time for merge operator:            0.000s</pre>
+<pre id="statistics-105">  Time for stop operator:             0.009s</pre>
+<pre id="statistics-106">  Time for adding to reached set:     0.003s</pre>
 <pre id="statistics-107"></pre>
 <pre id="statistics-108">Predicate-Abstraction Refiner statistics</pre>
 <pre id="statistics-109">----------------------------------------</pre>
 <pre id="statistics-110">Avg. length of target path (in blocks):                   6 (count: 3, min: 2, max: 2, avg: 2,00)</pre>
 <pre id="statistics-111">Number of infeasible sliced prefixes:                     0 (count: 0, min: 0, max: 0, avg: 0,00)</pre>
 <pre id="statistics-112"></pre>
-<pre id="statistics-113">Time for refinement:                                   0.332s</pre>
+<pre id="statistics-113">Time for refinement:                                   0.324s</pre>
 <pre id="statistics-114">  Counterexample analysis:                0.099s (Max:     0.046s, Calls: 3)</pre>
-<pre id="statistics-115">    Refinement sat check:                 0.053s</pre>
+<pre id="statistics-115">    Refinement sat check:                 0.054s</pre>
 <pre id="statistics-116">    Interpolant computation:              0.000s</pre>
 <pre id="statistics-117">  Error path post-processing:                          0.000s</pre>
 <pre id="statistics-118">  Path-formulas extraction:                            0.000s</pre>
 <pre id="statistics-119">  Building the counterexample trace:                   0.099s</pre>
-<pre id="statistics-120">  Extracting precise counterexample:                   0.199s</pre>
+<pre id="statistics-120">  Extracting precise counterexample:                   0.190s</pre>
 <pre id="statistics-121">  Extracting infeasible sliced prefixes:               0.000s</pre>
 <pre id="statistics-122">  Selecting infeasible sliced prefixes:                0.000s</pre>
 <pre id="statistics-123">  Predicate creation:                                  0.001s</pre>
-<pre id="statistics-124">  Precision update:                                    0.002s</pre>
-<pre id="statistics-125">  ARG update:                                          0.004s</pre>
+<pre id="statistics-124">  Precision update:                                    0.003s</pre>
+<pre id="statistics-125">  ARG update:                                          0.003s</pre>
 <pre id="statistics-126"></pre>
 <pre id="statistics-127">Length of refined path (in blocks):                       2 (count: 1, min: 2, max: 2, avg: 2,00)</pre>
 <pre id="statistics-128">Number of affected states:                                1 (count: 1, min: 1, max: 1, avg: 1,00)</pre>
@@ -1122,16 +1122,16 @@
 <pre id="statistics-145">Avg. size of reached set before ref.: 51.00</pre>
 <pre id="statistics-146">Avg. size of reached set after ref.:  3.00</pre>
 <pre id="statistics-147"></pre>
-<pre id="statistics-148">Total time for CEGAR algorithm:       0.719s</pre>
-<pre id="statistics-149">Time for refinements:                 0.344s</pre>
-<pre id="statistics-150">Average time for refinement:          0.114s</pre>
-<pre id="statistics-151">Max time for refinement:              0.249s</pre>
+<pre id="statistics-148">Total time for CEGAR algorithm:       0.705s</pre>
+<pre id="statistics-149">Time for refinements:                 0.336s</pre>
+<pre id="statistics-150">Average time for refinement:          0.112s</pre>
+<pre id="statistics-151">Max time for refinement:              0.240s</pre>
 <pre id="statistics-152"></pre>
 <pre id="statistics-153">Counterexample-Check Algorithm statistics</pre>
 <pre id="statistics-154">-----------------------------------------</pre>
 <pre id="statistics-155">Number of counterexample checks:    1</pre>
 <pre id="statistics-156">Number of infeasible paths:         0 (0%)</pre>
-<pre id="statistics-157">Time for counterexample checks:         0.432s</pre>
+<pre id="statistics-157">Time for counterexample checks:         0.410s</pre>
 <pre id="statistics-158"></pre>
 <pre id="statistics-159">Code Coverage</pre>
 <pre id="statistics-160">-----------------------------</pre>
@@ -1161,29 +1161,29 @@
 <pre id="statistics-184">  Number of target states:       1</pre>
 <pre id="statistics-185">  Size of final wait list        2</pre>
 <pre id="statistics-186"></pre>
-<pre id="statistics-187">Time for analysis setup:          2.485s</pre>
-<pre id="statistics-188">  Time for loading CPAs:          0.850s</pre>
-<pre id="statistics-189">  Time for loading parser:        0.635s</pre>
-<pre id="statistics-190">  Time for CFA construction:      0.921s</pre>
-<pre id="statistics-191">    Time for parsing file(s):     0.360s</pre>
-<pre id="statistics-192">    Time for AST to CFA:          0.242s</pre>
-<pre id="statistics-193">    Time for CFA sanity check:    0.041s</pre>
-<pre id="statistics-194">    Time for post-processing:     0.199s</pre>
+<pre id="statistics-187">Time for analysis setup:          2.620s</pre>
+<pre id="statistics-188">  Time for loading CPAs:          0.804s</pre>
+<pre id="statistics-189">  Time for loading parser:        0.712s</pre>
+<pre id="statistics-190">  Time for CFA construction:      1.017s</pre>
+<pre id="statistics-191">    Time for parsing file(s):     0.405s</pre>
+<pre id="statistics-192">    Time for AST to CFA:          0.277s</pre>
+<pre id="statistics-193">    Time for CFA sanity check:    0.045s</pre>
+<pre id="statistics-194">    Time for post-processing:     0.217s</pre>
 <pre id="statistics-195">      Time for var class.:        0.000s</pre>
-<pre id="statistics-196">    Time for CFA export:          0.569s</pre>
-<pre id="statistics-197">Time for Analysis:                1.151s</pre>
-<pre id="statistics-198">CPU time for analysis:            2.080s</pre>
-<pre id="statistics-199">Total time for CPAchecker:        3.656s</pre>
-<pre id="statistics-200">Total CPU time for CPAchecker:    8.130s</pre>
+<pre id="statistics-196">    Time for CFA export:          0.501s</pre>
+<pre id="statistics-197">Time for Analysis:                1.115s</pre>
+<pre id="statistics-198">CPU time for analysis:            2.040s</pre>
+<pre id="statistics-199">Total time for CPAchecker:        3.740s</pre>
+<pre id="statistics-200">Total CPU time for CPAchecker:    8.030s</pre>
 <pre id="statistics-201"></pre>
-<pre id="statistics-202">Time for Garbage Collector:       0.067s (in 5 runs)</pre>
+<pre id="statistics-202">Time for Garbage Collector:       0.062s (in 5 runs)</pre>
 <pre id="statistics-203">Garbage Collector(s) used:    PS MarkSweep, PS Scavenge</pre>
-<pre id="statistics-204">Used heap memory:                 80MB (    76 MiB) max;     36MB (    35 MiB) avg;     90MB (    86 MiB) peak</pre>
+<pre id="statistics-204">Used heap memory:                 76MB (    73 MiB) max;     34MB (    33 MiB) avg;     87MB (    83 MiB) peak</pre>
 <pre id="statistics-205">Used non-heap memory:             23MB (    22 MiB) max;     16MB (    15 MiB) avg;     23MB (    22 MiB) peak</pre>
-<pre id="statistics-206">Used in PS Old Gen pool:          16MB (    15 MiB) max;      9MB (     9 MiB) avg;     23MB (    22 MiB) peak</pre>
-<pre id="statistics-207">Allocated heap memory:           107MB (   102 MiB) max;     88MB (    84 MiB) avg</pre>
+<pre id="statistics-206">Used in PS Old Gen pool:          13MB (    13 MiB) max;      8MB (     7 MiB) avg;     20MB (    19 MiB) peak</pre>
+<pre id="statistics-207">Allocated heap memory:           107MB (   102 MiB) max;     86MB (    82 MiB) avg</pre>
 <pre id="statistics-208">Allocated non-heap memory:        24MB (    23 MiB) max;     24MB (    23 MiB) avg</pre>
-<pre id="statistics-209">Total process virtual memory:   2741MB (  2614 MiB) max;   2712MB (  2586 MiB) avg</pre>
+<pre id="statistics-209">Total process virtual memory:   2741MB (  2614 MiB) max;   2709MB (  2584 MiB) avg</pre>
             </div>
             <div class="fileContent" ng-show="tabIsSet(6)">
 <pre id="config-0">analysis.algorithm.CEGAR = true</pre>
