Added missing script variable to the template file for the counterexample report and renamed the file to match the documentation. Removed generated file. Commented the newCouterexampleReport option out while the corresponding code is not in svn.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@19325 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/Counterexample_Report/report_template.html
+++ b/Counterexample_Report/report_template.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-    <script type ="text/javascript" src="app/app0.js"></script>
+    <!--SCRIPT-->
     <script type="text/javascript" src="http://google-code-prettify.googlecode.com/svn/trunk/src/prettify.js"></script>
     <meta charset="UTF-8">
     <title>CPAchecker Report</title>
